Logger kiegészítések és Tektonok logolása